[project]
name = "tiktok-dashboard"
version = "0.1.0"
description = "A visualization dashboard to analyze mis/disinformation on TikTok"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash>=3.4.0",
    "dash-bootstrap-components>=2.0.4",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.3",
    "kagglehub>=0.4.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "python-dotenv>=1.2.1",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "wordcloud>=1.9.6",
]
